--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <header class="bg-primary bg-gradient text-white">
             <div class="container px-4 text-center">
                 <h1 class="fw-bolder">Inpainted gold</h1>
-                <p class="lead">A functional Bootstrap 5 boilerplate for one page scrolling websites</p>
+                <p class="lead">A vászonfelület titka, a katarzis eléréséhez</p>
                 <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a>
             </div>
         </header>
