--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>Gold</h2>
-                        <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
-                        <ul>
-                            <li>Clickable nav links that smooth scroll to page sections</li>
-                            <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-                            <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-                            <li>Minimal custom CSS so you are free to explore your own unique design options</li>
+                                                <ul>                            <li>Az aranyról, mint színről csakis úgy beszélhetünk, hogyha azzal kapcsolatba állítjuk a fényt. A
+fény ikonnyelvűségéről Lepahin Valerij könyvében így ír: „A két világ – látható és láthatatlan,földi világ és a Mennyek Országa – olyan lényeges különbséget mutat, hogy közvetlen
+kapcsolat nem lehetséges közöttük. Az Isteni Lényeg megjelenése a maga tisztaságában,erejében és dicsőségében a látható valóság pusztulását jelentené. Az Isteni Lényeg csak
+ikonképek formájában nyilvánulhat meg az ember számára ebben a világban.</li>
+                            
                         </ul>
                     </div>
                 </div>
