--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>Gold</h2>
-                                                <ul>                            <li>Az aranyról, mint színről csakis úgy beszélhetünk, hogyha azzal kapcsolatba állítjuk a fényt. A
+                                              <p class="lead">  Az aranyról, mint színről csakis úgy beszélhetünk, hogyha azzal kapcsolatba állítjuk a fényt. A
 fény ikonnyelvűségéről Lepahin Valerij könyvében így ír: „A két világ – látható és láthatatlan,földi világ és a Mennyek Országa – olyan lényeges különbséget mutat, hogy közvetlen
 kapcsolat nem lehetséges közöttük. Az Isteni Lényeg megjelenése a maga tisztaságában,erejében és dicsőségében a látható valóság pusztulását jelentené. Az Isteni Lényeg csak
-ikonképek formájában nyilvánulhat meg az ember számára ebben a világban.</li>
+ikonképek formájában nyilvánulhat meg az ember számára ebben a világban.</p>
                             
-                        </ul>
-                    </div>
+                                            </div>
                 </div>
             </div>
         </section>
