--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ ikonképek formájában nyilvánulhat meg az ember számára ebben a világban.<
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>Inpainting </h2>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+                        <p class="lead">Az egymásba folyó stílusoknak és művézi eljárásoknak mintegy képimetaforája az értelmezők többsége szerint a „Vermalung” (vagyis a felül-szét- vagy átfesés) richteri gesztusa, amely a felület részleges desruálásán keresztül teremt életlen, egymásba folyó, összemosódó minőségeket.Olyan képmezőket, amelyeket csábító a képek folyamatos áramlásáravonatkozó érzéki, mégis konceptuális karakterű festői metaforákként látni.Buchloh azon felvetését, miszerint Richter különböző művészettörténetipozíciókkal vet számot, azokat megidézve, újragondolva, alátámasztják a richteri életmű különféle műcsoportjai. Richter művészetében ugyanisegyaránt megjelenik felidézett paradigmaként a readymade, a monokrómia,a kollázs és a montázs, a véletlen folyamatokat, illetve automatizmusokatmodellező experimentális képalkotás, az informel, a konkrét művészet,kitekintve a minimal artra, illetve szintén asszociálható Richter életművea pop arttal és a fotórealizmussal. Maga Richter azonban egyik stíluskategóriába sem sorolható be maradéktalanul, az általa megidézett stiláris megoldások egy mindenféle képalkotó eljárás interiorizálni képes komplexkódrendszer részeiként jelennek meg</p>
                     </div>
                 </div>
             </div>
