--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ ikonképek formájában nyilvánulhat meg az ember számára ebben a világban.<
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>Overlay</h2>
-                        <p class="lead"></p>
+                        <p class="lead"><img src=”IMG_20221105_175537.jpg”</p>
                     </div>
                 </div>
             </div>
