--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ ikonképek formájában nyilvánulhat meg az ember számára ebben a világban.<
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>Overlay</h2>
-                        <img src="IMG_20221105_175537.jpg" ="20" ="40">
+                         <img src="IMG_20221105_175537.jpg" alt="Image" height="250" width="400">
                     </div>
                 </div>
             </div>
