--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@ ikonképek formájában nyilvánulhat meg az ember számára ebben a világban.<
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>Overlay</h2>
+                       <p class="lead"> If the brown color gave enough evidence for the critical ideological examination, I will necesarrily need the arbitrariness of aesthetic autonomy, to give a new meaning with silk to overlay the work, throughout political expropriation.</p>
+
+
                          <img src="IMG_20221105_175537.jpg" alt="Image" height="500" width="800">
                     </div>
                 </div>
